# medical_agent

./: .gitignore  README.md  make_test_pdf.py  make_test_pdf_extended.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
dscribe/: __init__.py  chat.py  cli.py  config.py  pipeline.py  robustness.py  schema.py
dscribe/agent/: __init__.py  loop.py  prompts.py
dscribe/ingestion/: __init__.py  extractor.py  index_store.py  pdf_loader.py  vision_ocr.py
dscribe/observability/: __init__.py  trace.py
dscribe/render/: __init__.py  markdown.py
dscribe/tools/: __init__.py  conflicts.py  context.py  draft.py  drug_interactions.py  reconciliation.py  registry.py
