[project]
name = "dscribe"
version = "0.1.0"
description = "Agentic AI that drafts clinically-safe discharge summaries from messy source-note PDFs."
requires-python = ">=3.13"
dependencies = [
    # LLM / agent
    "openai>=1.40",
    "langgraph>=0.2.40",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    # Ingestion / retrieval
    "llama-index-core>=0.11",
    "llama-index-embeddings-openai>=0.2",
    "llama-index-vector-stores-chroma>=0.2",
    "llama-index-readers-file>=0.2",
    "chromadb>=0.5",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    # Models / utils
    "pydantic>=2.7",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    # UI
    "streamlit>=1.36",
]

[project.scripts]
dscribe = "dscribe.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
